adicionado ação do botao exibir tabela no clickBait.js

--- a/teste.html
+++ b/teste.html
@@ -87,6 +87,14 @@
     </div>
 
   </div>
+
+  <div id="botao" class="container">
+      <button id="btnExibirTabelaResultado" type="button" name="button">Começar novo jogo</button>
+  </div>
+
+  <div>
+    <p></p>
+  </div>
 </body>
 
 </html>
